Fri Oct 25 20:02:17 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* loopback.c (setup_loopback_device): Bother to mark interface up
	too. 

Thu Oct 24 22:38:55 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): Call setup_loopback_device before parsing args
	(and thus before the ethernet device shows up).
	* loopback.c: New file.
	* Makefile (SRCS): Add loopback.c.
	* pfinet.h (loopback_dev): New variable.

	* pfinet.h (ip_rt_del): New prototype.

Thu Sep 12 16:47:24 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(pfinet): Omit special dependency.

	* Makefile (vpath %.c): Put this after Makeconf inclusion so it
	catches setting of $(srcdir) there.

Fri Sep  6 16:46:43 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* socket-ops.c (S_socket_recv): Bother to pass
	USER->sock->userflags through to the recvfrom routine.

Sat Jul 20 15:48:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (lndist-asm-files): Look for files in $(srcdir).
	(lndist-linux-files): Likewise.
	(lndist-linux-inet-files): Likewise.

Fri Jul 19 09:39:08 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pfinet.h (make_sock_user): Declaration updated.

Thu Jul 18 23:19:07 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* misc.c (make_sock_user): New parm `noinstall'; if it's set use
	non-installing version of ports_create_port.  All callers
	changed. 
	* io-ops.c (S_io_reauthenticate): Install NEWUSER port right into
	portset after it's fully initialized.

Sat Jul 13 20:18:18 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-ops.c (S_io_reauthenticate): Repeat auth_server_authenticate
 	for as long as we get EINTR.  Deal with other errors without
 	crashing.

Sun Jul  7 21:29:42 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-ops.c (S_io_reauthenticate): Don't use unsafe MOVE_SEND in
 	call to auth_server_authenticate.
